# gvbasic-simulator4cpp

./: .gitignore  CMakeLists.txt  GVBASIC.sln  LICENSE  README.md  config.ini  language.md  readme.txt
GVB/: 1.txt  GVB.APS  GVB.vcxproj  GVB.vcxproj.filters  debug.h  error.cpp  file.cpp  file.h  gc.cpp  lex.h  replace.cpp  tree.cpp
GVB_old/: condev.cpp  condev.h  debug.cpp  error.h  gvb.h  gvbc.cpp  gvbrun.cpp  hash.cpp  lex.cpp  test.cpp  tree.h  util.h
bas/: 冲出海底隧道.txt  四环棋.txt  推箱达人.txt  算24.txt  绝对下落.txt
bas_files/: LUMINES.txt  QueerBox.txt  天虫总动员1.1.txt  小爬虫.txt  打砖块.txt  猜数字.txt  箭头对对碰.txt  绝对下落地图.txt  鹿逐中原.txt
gui_qt/: gui_qt.cpp  gui_qt.h  gui_qt.pro  main.cpp  mainwindow.cpp  mainwindow.h  readconfig.cpp  readconfig.h  screen.cpp  screen.h  var_edit_dlg.cpp  var_edit_dlg.h
gui_win32/: asm.cpp  custom.cpp  gui_win32.aps  gui_win32.rc  gui_win32.vcxproj  gui_win32.vcxproj.filters  gvbsim.cpp  gvbsim.h  ime.cpp  ime.h  resource.h
gui_win32/bas/: 1.txt  3d迷宫.txt  CASTLE.txt  FuncPlot7.TXT  SuperWarX.txt  XTII-SP.txt  五子棋.txt  元素周期表.TXT  冒险岛III.txt  冲出海底隧道.TXT  动物园历险.TXT  大富翁.TXT  大航海时代.txt  大航海时代初始化.txt  小爬虫.txt  帝国TOOL.txt  打砖块.txt  欢乐潜水艇.txt  炸弹小子.txt  直感一笔.TXT  红色警戒.txt  远古帝国.txt  逃狱威龙.TXT  金字塔大冒险.TXT  鹿逐中原.txt
gvb/: common.h  compile.cpp  compile.h  data_man.cpp  data_man.h  device.cpp  device.h  error.h  fake6502_wrap.cpp  fake6502_wrap.h  file.cpp  file.h  func.cpp  func.h  gvb.cpp  gvb.h  igui.h  lex.cpp  lex.h  node.h  node_man.cpp  node_man.h  node_mgr.cpp  node_mgr.h  random.h  real.cpp  real.h  runtime.cpp  tree.h  value.cpp  value.h
gvb/test/: debug.cpp  debug.h  device_stub.cpp  test_lex.cpp  test_parse.cpp  test_real.cpp  test_runtime.cpp
test_case/: lex_1.in  lex_1.out  parse_1.in  parse_1.out  runtime_1.in  runtime_1.out  runtime_2.in  runtime_2.out  runtime_3.in  runtime_3.out  runtime_4.in  runtime_4.out
